test/cases/errors/cyclic-reexport-references/cycle.js
export { A } from "./a";
export { B } from "./b";
